[feat] : Constants 클래스 추가
1. github action 배포를 위해 상수 관리 클래스 추가

--- a/.gitignore
+++ b/.gitignore
@@ -98,4 +98,4 @@ replay_pid*
 
 target/
 
-final/src/main/java/com/project/app/common/Constants.java
+# final/src/main/java/com/project/app/common/Constants.java
