[feat] : pom.xml 수정
1. 빌드 파일명 수정

--- a/final/pom.xml
+++ b/final/pom.xml
@@ -375,6 +375,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>trelloServer</finalName>  <!-- ✅ 빌드된 `.war` 파일의 최종 이름을 설정 -->
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
