--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Java CI/CD with Maven
 
 on:
     push:
@@ -20,15 +20,8 @@ jobs:
                   distribution: "temurin"
                   cache: maven
 
-            - name: Cache Maven packages
-              uses: actions/cache@v4
-              with:
-                  path: ~/.m2
-                  key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-                  restore-keys: ${{ runner.os }}-m2
-
-            - name: Clear Maven Cache (Optional)
-              run: rm -rf ~/.m2/repository/com/project # ❗ 손상된 JAR 방지
+            - name: Clear Maven Cache
+              run: rm -rf ~/.m2/repository # ✅ 손상된 JAR 문제 방지
 
             - name: Build with Maven
               working-directory: final
@@ -66,3 +59,27 @@ jobs:
                   ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
                     sudo systemctl stop tomcat
                     sudo rm -rf /home/tomcat/apache-tomcat-10.1.34/webapps/trelloServer.war
+                    sudo rm -rf /home/tomcat/apache-tomcat-10.1.34/webapps/trelloServer/
+                  EOF
+
+                  # 새로운 WAR 파일 업로드
+                  scp -i private_key.pem -o StrictHostKeyChecking=no final/target/trelloServer.war ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/home/tomcat/apache-tomcat-10.1.34/webapps/
+
+                  # 파일이 정상적으로 업로드되었는지 확인
+                  ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
+                    ls -al /home/tomcat/apache-tomcat-10.1.34/webapps/
+                  EOF
+
+                  # Tomcat 재시작
+                  ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
+                    sudo systemctl start tomcat
+                  EOF
+
+                  # SSH 키 삭제 (보안 강화)
+                  rm -f private_key.pem
+
+            - name: Check Tomcat Logs After Deployment
+              run: |
+                  ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
+                    tail -n 50 /home/tomcat/apache-tomcat-10.1.34/logs/catalina.out
+                  EOF
