--- a/final/pom.xml
+++ b/final/pom.xml
@@ -375,6 +375,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>final</finalName>
 		<plugins>
 		 	<!-- Maven WAR Plugin: 불필요한 파일 제거 -->
 	        <plugin>
