[build] : deploy.yml 수정
1. 빌드 경로 및 빌드명을 antico로 수정

--- a/antico/pom.xml
+++ b/antico/pom.xml
@@ -375,7 +375,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>final</finalName>
+		<finalName>antico</finalName>
 		<plugins>
 		 	<!-- Maven WAR Plugin: 불필요한 파일 제거 -->
 	        <plugin>
