--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,18 +22,18 @@ jobs:
               run: rm -rf ~/.m2/repository
 
             - name: Build with Maven
-              working-directory: final
+              working-directory: antico
               run: mvn -B clean package
 
             - name: Verify WAR file exists before upload
-              working-directory: final
+              working-directory: antico
               run: ls -al target
 
             - name: Upload build artifact (WAR file)
               uses: actions/upload-artifact@v4
               with:
-                  name: final
-                  path: final/target/final.war
+                  name: antico
+                  path: antico/target/antico.war
 
     deploy:
         needs: build
@@ -42,11 +42,11 @@ jobs:
             - name: Download build artifact
               uses: actions/download-artifact@v4
               with:
-                  name: final
-                  path: final/target/
+                  name: antico
+                  path: antico/target/
 
             - name: Verify WAR file exists after download
-              run: ls -al final/target/
+              run: ls -al antico/target/
 
             - name: Deploy to EC2
               run: |
@@ -56,12 +56,12 @@ jobs:
                   # Tomcat 중지 후 기존 파일 삭제
                   ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
                     sudo systemctl stop tomcat
-                    sudo rm -rf /home/tomcat/apache-tomcat-10.1.34/webapps/final.war
-                    sudo rm -rf /home/tomcat/apache-tomcat-10.1.34/webapps/final/
+                    sudo rm -rf /home/tomcat/apache-tomcat-10.1.34/webapps/antico.war
+                    sudo rm -rf /home/tomcat/apache-tomcat-10.1.34/webapps/antico/
                   EOF
 
                   # 새로운 WAR 파일 업로드
-                  scp -i private_key.pem -o StrictHostKeyChecking=no final/target/final.war ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/home/tomcat/apache-tomcat-10.1.34/webapps/
+                  scp -i private_key.pem -o StrictHostKeyChecking=no antico/target/antico.war ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/home/tomcat/apache-tomcat-10.1.34/webapps/
 
                   # 파일이 정상적으로 업로드되었는지 확인
                   ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
