--- a/antico/pom.xml
+++ b/antico/pom.xml
@@ -246,7 +246,14 @@
 			<version>5.2.0</version>
 		</dependency>
 		
-		
+		<!-- apache common langs 문자열 처리 라이브러리 -->
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.17.0</version>
+		</dependency>
+
 		<!-- log4j 관련 라이브러리 추가하기 -->
 		<dependency>
 			<groupId>org.lazyluke</groupId>
