--- a/antico/pom.xml
+++ b/antico/pom.xml
@@ -374,8 +374,25 @@
         <!--<version>5.7.11</version>-->
      
         </dependency>
-      
         
+        <!-- yml, properties 설정값 암호화를 위한 jasypt 암호화 라이브러리 -->
+		<!-- https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter -->
+		<dependency>
+		    <groupId>com.github.ulisesbocchio</groupId>
+		    <artifactId>jasypt-spring-boot-starter</artifactId>
+		    <version>3.0.5</version>
+		</dependency>
+
+		<!-- aws s3 api -->
+		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/s3 -->
+		<dependency>
+		    <groupId>software.amazon.awssdk</groupId>
+		    <artifactId>s3</artifactId>
+		    <version>2.30.20</version>
+		</dependency>
+
+
+ 
 
 <!-- ======================= 라이브러리 추가 끝 ======================= -->		
 	
