--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,8 @@ jobs:
     deploy:
         needs: build
         runs-on: ubuntu-latest
+        env:
+            JASYPT_ENCRYPTOR_PASSWORD: ${{ secrets.JASYPT_ENCRYPTOR_PASSWORD}}
         steps:
             - name: Download build artifact
               uses: actions/download-artifact@v4
