[feat] : 채팅 읽음 상태 기능 추가
1. 채팅 읽음 상태 기능 추가
2. slf4j 로그 추가
3. 상품 상세페이지에서 채팅방을 생성하도록 변경
4. tab.jsp를 header에서 불러오도록 변경

--- a/antico/pom.xml
+++ b/antico/pom.xml
@@ -260,7 +260,12 @@
 			<artifactId>log4jdbc-remix</artifactId>
 			<version>0.2.7</version>
 		</dependency>
-		
+
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		</dependency>
 		
 		<!-- 이미지 썸네일 생성 라이브러리인 Thumbnailator 라이브러리 추가하기 -->
 		<dependency>
