--- a/antico/pom.xml
+++ b/antico/pom.xml
@@ -376,6 +376,7 @@
     		<artifactId>spring-security-taglibs</artifactId> 
   		 
         <!--<version>${org.springframework.security-version}</version>--> <!-- <version> 태그를 사용하지 않으면 자동적으로 스프링 버전에 맞는 최신버전(2024년 9월 1일 기준 6.3.3) 으로 다운을 받게 해준다. -->
+        
         <!--<version>5.7.11</version>-->
      
         </dependency>
@@ -396,17 +397,16 @@
 		    <version>2.30.20</version>
 		</dependency>
 
-		
-		<dependency> 
-         	<groupId>org.springframework.boot</groupId> 
-         	<artifactId>spring-boot-starter-webflux</artifactId> 
-      	</dependency>
-      
-      	<!-- 웬 클라이언트 의존성 -->
-       	<dependency>
-           	<groupId>org.springframework.boot</groupId>
-           	<artifactId>spring-boot-starter-webflux</artifactId>
-       	</dependency>
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-oauth2-client</artifactId>
+    	</dependency>
+    	
+    	
+		<dependency>
+        	<groupId>com.fasterxml.jackson.core</groupId>
+        	<artifactId>jackson-databind</artifactId>
+    	</dependency>
  
 
 <!-- ======================= 라이브러리 추가 끝 ======================= -->		
