--- a/.gitignore
+++ b/.gitignore
@@ -97,5 +97,5 @@ replay_pid*
 # End of https://www.toptal.com/developers/gitignore/api/java,eclipse
 
 target/
-
+.idea/
 # final/src/main/java/com/project/app/common/Constants.java
